5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1593_1801.log
== TEST (2019-03-26 10:50:48) 
-- CODE:
nome=int(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*numero
print(feit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:21) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*numero
print(feit)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:29) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*_numero

print(feit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    feit= nome*_numero
NameError: name '_numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:53:55) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*numero

print(feit)
-- EXECUTION TIME:
0.14405
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:25) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*numero
result=("feit")

print(feit)
-- EXECUTION TIME:
0.131873
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:43) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

feit= nome*numero


print(feit)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:57) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

a=" nome "
b= a* numero


print(b)
-- OUTPUT:
nome  nome  nome  nome  nome  nome  nome  nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:35) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

var= nome*numero

feit=numero*("Abra ")+ var

print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:50) 
-- CODE:
nome=(input("digite o nome: "))
numero=int(input("digite o numero de vezes: "))

var= nome*numero

feit=numero*("Abra ")+ var

print(feit)
-- OUTPUT:
Abra Abra Abra Abra Abra Abra Abra Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:41) 
-- CODE:
n=(input("digite o nome: "))
v=int(input("digite o numero de vezes: "))
a="Abra"
feit=(a+ nome)*v


print(feit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    feit=(a+ nome)*v
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:15:06) 
-- CODE:
n=(input("digite o nome: "))
v=int(input("digite o numero de vezes: "))
a="Abra"
feit=(a+ n)*v


print(feit)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:15:27) 
-- CODE:
n=(input("digite o nome: "))
v=int(input("digite o numero de vezes: "))
a=" Abra"
feit=(a+ n)*v


print(feit)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:07) 
-- CODE:
n=(input("digite o nome: "))
v=int(input("digite o numero de vezes: "))
a=" Abra"
feit=(a+" "+n)*v


print(feit)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:23) 
-- CODE:
n=(input("digite o nome: "))
v=int(input("digite o numero de vezes: "))
a=" Abra"
feit=(a+" "+n)*v


print(feit)
-- EXECUTION TIME:
0.164363
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
